# virusTelegramBot

./: LICENSE  README.md  bot.py  config.py  database.db  main.py  models.py  pyproject.toml  utils.py
handlers/: __init__.py  admin.py  client.py  inventory.py  shop.py
service/: filters.py  inventory.py  qVirus.py  quest.py  shop.py
texts/: __init__.py  client.py  templates.py
